k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-deployment
  labels:
    app: kuber-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      env: prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-app
          image: koalaa13/hw2-repository
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
